--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Hannah Hudson</title>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poppins:200" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
